[package]
name = "xyz"
version = "0.2.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Parser for the RPG Maker XYZ image format"
documentation = "https://lambda.xyz/rust-xyz/xyz/"
repository = "https://github.com/lfairy/rust-xyz"
keywords = ["image", "xyz"]
exclude = ["tests/*"]

[dependencies]
byteorder = "0.5"
flate2 = "0.2"

[dev-dependencies]
image = "0.7"
